<resources>
    <string name="app_name">Shopping Kart</string>
    <string name="tutorial_preference_key">tutorial_finished</string>
    <string name="shop_name">Sound Haven</string>
    <string name="hi_fi_audio_store"><![CDATA[Hi-Fi & Audio store]]></string>
    <string name="shop_description">Sound Haven is your destination for premium audio equipment. We offer a carefully selected range of high-end speakers, headphones, amplifiers, and turntables to take your music listening experience to the next level. Come visit us and let our knowledgeable staff guide you to the perfect setup for your home or office.</string>
    <string name="products_header">Products</string>
    <string name="my_cart_header">My Cart</string>
    <string name="delivery_location_header">Delivery Location</string>
    <string name="payment_method_header">Payment Method</string>
    <string name="order_info_header">Order Info</string>
    <string name="favourites_header">Favourites</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_with_price">Checkout (%s)</string>
    <string name="shipping_price_disclaimer">Shipping price will be calculated on checkout</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="out_of_stock_short">Out of stock</string>
    <string name="out_of_stock_long">This item is currently out of stock</string>
    <string name="location">%1$s, %2$s</string>
    <string name="change_location">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hint_street_name">Street name</string>
    <string name="hint_street_number">Street number</string>
    <string name="hint_postal_code">Postal code</string>
    <string name="hint_city">City</string>
    <string name="shopping">Shopping</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="order_details">Order Details</string>
    <string name="order_email_body">Hello, \n \n I would like to place an order: \n \n %1$s \n \n My address is: \n %2$s \n \n Thank you</string>
    <string name="cancel_order">Cancel order</string>
    <string name="cancel_order_dialog_title">Are you sure you want to cancel this order?</string>
    <string name="cancel_order_confirmation">Cart has been emptied</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back_to_browsing">Back to Home</string>
    <string name="order_success_header">Order success</string>
    <string name="order_success_info">Your package will be sent to your address. Thank you for your order!</string>
    <string name="continue_string">Continue</string>
    <string name="search_hint">Search for products</string>
    <string name="search_no_results">We are sorry, we could not find any results for your search</string>
</resources>