<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.zhvk.shoppingkart.model.CartViewModel" />

        <variable
            name="fragment"
            type="com.zhvk.shoppingkart.SummaryFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_cart_header"
                style="@style/TextAppearance.ShoppingKart.Header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/my_cart_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_cart_header" />

            <TextView
                android:id="@+id/delivery_location_header"
                style="@style/TextAppearance.ShoppingKart.Header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/delivery_location_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_view" />

            <FrameLayout
                android:id="@+id/delivery_location_wrapper"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/delivery_location_header" />

            <TextView
                android:id="@+id/payment_method_header"
                style="@style/TextAppearance.ShoppingKart.Header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/payment_method_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/delivery_location_wrapper" />

            <FrameLayout
                android:id="@+id/payment_method_wrapper"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payment_method_header" />

            <TextView
                android:id="@+id/order_info_header"
                style="@style/TextAppearance.ShoppingKart.Header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/order_info_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payment_method_wrapper" />

            <TextView
                android:id="@+id/subtotal_price_label"
                style="@style/TextAppearance.ShoppingKart.NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/subtotal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_info_header" />

            <TextView
                android:id="@+id/subtotal_price_value"
                style="@style/TextAppearance.ShoppingKart.PriceText.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/subtotal_price_label"
                tools:text="$199.00" />

            <TextView
                android:id="@+id/shipping_price_label"
                style="@style/TextAppearance.ShoppingKart.NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/shipping_cost"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtotal_price_label" />

            <TextView
                android:id="@+id/shipping_price_value"
                style="@style/TextAppearance.ShoppingKart.PriceText.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/shipping_price_label"
                tools:text="$20.00" />

            <TextView
                android:id="@+id/total_price_label"
                style="@style/TextAppearance.ShoppingKart.NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shipping_price_label" />

            <TextView
                android:id="@+id/total_price_value"
                style="@style/TextAppearance.ShoppingKart.PriceText.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/total_price_label"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="$219.00" />

            <Button
                android:id="@+id/button_checkout"
                style="Widget.ShoppingKart.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/checkout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_price_label"
                tools:text="Checkout ($219.00)" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>