<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.success.SuccessFragment">

    <data>

        <variable
            name="fragment"
            type="com.zhvk.shoppingkart.ui.success.SuccessFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/blue_check_animation" />

        <TextView
            android:id="@+id/order_success_header"
            style="@style/TextAppearance.ShoppingKart.Header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/order_success_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animationView" />

        <TextView
            android:id="@+id/order_success_info"
            style="@style/TextAppearance.ShoppingKart.NormalText.Light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/order_success_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_success_header" />

        <Button
            android:id="@+id/button_return_to_browsing"
            style="@style/Widget.ShoppingKart.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:onClick="@{() -> fragment.navigateBackToBrowseFragment()}"
            android:text="@string/back_to_browsing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>